Impute_Experiments/logs/outputs/output.565554_1.out
Run: 1
/cm/local/apps/slurm/var/spool/job565554/slurm_script: line 23: /common/ketrong/minconda3/etc/profile.d/conda.sh: No such file or directory
/cm/local/apps/slurm/var/spool/job565554/slurm_script: line 26: $'\nconda create --name tpot2devenv -c conda-forge python=3.10\n': command not found
/cm/local/apps/slurm/var/spool/job565554/slurm_script: line 31: $'\npip install -r requirements.txt\n': command not found
RunStart
Traceback (most recent call last):
  File "/common/ketrong/AutoImputeExp/tpot2_imputetest/Impute_Experiments/main.py", line 6, in <module>
    import utils
  File "/common/ketrong/AutoImputeExp/tpot2_imputetest/Impute_Experiments/utils.py", line 309
    X_train, y_train, X_test, y_test = load_task(base_save_folder=base_save_folder, exp=exp type=type, levelstr=levelstr, task_id=taskid, preprocess=True)
                                                                                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
srun: error: esplhpc-cp001: task 0: Exited with exit code 1
